--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DietBot</title>
     
-    <link rel="stylesheet" href="Style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
@@ -64,6 +64,6 @@
     
     <input type="file" id="file-input" accept="image/*" style="display: none;">
 
-    <script src="Script.js"></script>
+   <script src="./script.js"></script>
 </body>
 </html>
